fix: collapse decorative separators in ContentSanitizer and sanitize /api/inspect highlights
ContentSanitizer now strips decorative separator patterns (====, ----, ~~~~)
that were rendering as visual noise in Source Node tooltips. The /api/inspect
endpoint now sanitizes highlights before returning them. Adds 3 unit tests.

Also updates CLAUDE.md (testing tiers, bootRun docs, Co-Authored-By tag) and
rewrites AGENTS.md as a concise reference pointing to CLAUDE.md.

Co-Authored-By: Claude <noreply@anthropic.com>